--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,7 @@
         "*://*.console.aws.amazon.com/cloudwatch/home?region=*"
       ],
       "js": [
+        "assets/js/logs-microconsole.min.js",
         "assets/js/jquery.min.js",
         "assets/js/jsoneditor.min.js",
         "assets/js/functions/logsInsights.js",
@@ -30,6 +31,16 @@
       ],
       "css": [
         "assets/css/jsoneditor.min.css"
+      ]
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "assets/js/jsoneditor.min.js"
+      ],
+      "matches": [
+        "<all_urls>"
       ]
     }
   ]
