--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,7 @@
   "manifest_version": 3,
   "version": "2.0.0",
   "description": "AWS utilities",
-  "permissions": [
-    "activeTab",
-    "scripting",
-    "storage"
-  ],
+  "permissions": [],
   "icons": {
     "16": "./assets/images/icon1.png",
     "32": "./assets/images/icon1.png",
